fix: collaps menu in Header

--- a/src/app/header/Header.module.scss
+++ b/src/app/header/Header.module.scss
@@ -51,7 +51,7 @@
             .nav {
                 position: absolute;
                 opacity: 0;
-                top: -200px;
+                top: 0;
                 transition: all 0.8s ease 0s;
                 z-index: 10;
             }
